--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,16 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="CSS/styles.css">
-    <title>To Do List</title>
-    
-
-
-</head>
-<body>
+<%- include('header'); -%>
 
     <div class="box" id="heading">
         <h1> <%= listTitle %> </h1>
@@ -26,9 +14,8 @@
         <% } %>       
         <form action="/" method="POST" class="item">
             <input placeholder="New Item" type="text" name="newItem" autocomplete="off" >
-            <button type="submit" name="list" value="<%= listTitle %>">+</button>
+            <button type="submit" name="list" value="<%=listTitle %>">+</button>
         </form>
-    </div>  
+    </div> 
+    <%- include('footer'); -%>
     
-</body>
-</html> 
